--- a/css/webinar_maduracion.css
+++ b/css/webinar_maduracion.css
@@ -110,40 +110,40 @@ body {
     background-image: url('../assets/banner_img/bann.png');
     background-size: cover;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    row-gap: 40px;
-
-}
-
-.s01_container {
-    padding-top: 20px;
-    padding-bottom: 20px;
-    margin: auto;
-    width: 90%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+
+
 }
 
-.s01_container img {
-    padding-top: 20px;
-    padding-left: 20px;
-    width: 500px;
-    height: 300px;
+.img_s1 {
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    width: 90%;
+    object-fit: cover;
+    gap: 40px;
 }
 
-.s01_container p {
-   
-    width: 440px;
+.img_s1 img {
+
+    margin: auto;
+    width: 400px;
     height: 300px;
-    padding-left: 20px;
+    object-fit: cover;
+}
+.p_s1{
+    width: 90%;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    font-size: 24px;
+    color: #005E6C;
     font-weight: 800;
-    font-size: 25px;
-    color: #115C6C;
-    display: grid;
-    align-items: center;
+
 }
+
 
 
 /* ---------- */
@@ -160,7 +160,6 @@ body {
 .seccion_02 img {
 
     width: 100%;
-    height: 500px;
     object-fit: cover;
 }
 
@@ -174,15 +173,15 @@ body {
 }
 
 .s02_texto h2 {
-    
-    font-size: 40px;
+
+    font-size: 50px;
     margin-bottom: 20px;
 }
 
 .s02_texto p {
-    
+
     text-transform: uppercase;
-    font-size: 20px;
+    font-size: 30px;
 
 }
 
@@ -245,14 +244,14 @@ body {
 }
 
 .s03 h2 {
-    
+
     color: #fff;
     font-size: 40px;
     margin-bottom: 20px;
 }
 
 .s03 p {
-    
+
     color: #fff;
     font-size: 30px;
     margin-bottom: 20px;
@@ -299,7 +298,7 @@ body {
 }
 
 .cont p {
-    
+
     text-align: center;
     font-size: 30px;
     color: #005E6C;
@@ -498,4 +497,207 @@ a {
     font-size: 50px;
 }
 
+@media only screen and (max-width: 600px) {
 
+    /* BANNER */
+    .banner {
+        height: 70vh;
+    }
+
+    .text_content {
+        padding: 20px;
+        grid-template-columns: 1fr;
+        justify-items: center;
+        text-align: center;
+        /* Centra los elementos en dispositivos móviles */
+    }
+
+    .text_content h1 {
+        font-size: 40px;
+    }
+
+    .text_content h2 {
+        font-size: 20px;
+        margin-bottom: 20px;
+        /* Reduce el espacio entre elementos en dispositivos móviles */
+    }
+
+    .logo {
+        width: 120px;
+        /* Reduce el tamaño del logo en dispositivos móviles */
+    }
+
+    /* Seccion 01 */
+    .seccion_01 {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding-bottom: 20px;
+    }
+
+    .img_s1 {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+
+    .img_s1 img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+
+    .p_s1 {
+        margin-top: 20px; /* Ajusta el margen superior del texto según sea necesario */
+    }
+
+    /* Seccion 02 */
+    .seccion_02 {
+        padding-top: 10px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .s02_texto {
+        width: 80%;
+        margin-left: 0;
+        margin-top: 0;
+        text-align: center;
+    }
+
+    .s02_texto p {
+        font-size: 25px;
+    }
+
+    .seccion_02 img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+    }
+
+    /* Contador */
+    .contador {
+        font-size: 10px;
+        width: 100vw;
+        height: 100%;
+    }
+
+    #countdown {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #countdown div {
+        text-align: center;
+        margin: 10px;
+        padding: 12px;
+        color: #005E6C;
+        font-weight: 900;
+        font-size: 18px;
+        min-width: 20px;
+    }
+
+    /* Seccion 03 */
+    .seccion_03 {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    .s03 {
+        margin: auto;
+        padding-top: 50px;
+        
+    }
+
+    .s03 p {
+        width: 80%;
+        font-size: 30px;
+    }
+
+    /* Formulario de contacto */
+    .container {
+        width: 80%;
+    }
+
+    .container h3 {
+        font-size: 30px;
+    }
+
+    #mc_embed_shell h4 {
+        font-size: 20px;
+    }
+
+    /* Seccion 04 */
+    .seccion_04 {
+        width: 100%;
+        height: 100%;
+    }
+
+    .superior {
+        display: none;
+    }
+
+    .inferior {
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cont1 h2 {
+        padding-left: 0;
+    }
+
+    /* Seccion 05 */
+    .seccion_05 {
+        width: 100%;
+        height: 300px;
+    }
+
+    /* Footer Styles */
+    .footer__container {
+        padding: 20px;
+    }
+
+    .footer__col h4 {
+        font-size: 20px;
+    }
+
+    .footer__col p {
+        font-size: 16px;
+    }
+
+    .footer__socials span {
+        font-size: 24px;
+    }
+
+    .footer__bar {
+        font-size: 16px;
+    }
+
+    .popup-content {
+        display: flex;
+        height: 400px;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .close {
+        width: 30px;
+        color: #000;
+        position: absolute;
+        right: 10px;
+        cursor: pointer;
+        font-size: 50px;
+        z-index: 1;
+    }
+}
