--- a/css/banner.css
+++ b/css/banner.css
@@ -12,10 +12,14 @@
     background-size: cover;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    position: relative;
+    z-index: 1;
 }
+
 
 .superior_01{
     width: 100%;
+    z-index: 2;
 }
 .superior_01 img{
     width: 14rem;
@@ -27,7 +31,18 @@
 .inferior_01{
     width: 100%;
     display: flex;
+    z-index: 1;
 
+}
+.inferior_01::before{
+    content: " ";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(15, 29, 50, 0.341);
+    z-index: -1;
 }
 .texto{
     font-size: 45px;
@@ -52,6 +67,8 @@
 }
 /* SECCION 2 */
 .seccion_02 {
+    width: 100%;
+    padding: 20px;
     background-color: #009AA9;
     background-size: cover;
     display: grid;
@@ -61,41 +78,39 @@
 
 .pregunta_02{
     margin: auto 38px;
-
-    font-size: 20px;
 }
 .pregunta_02 h2{
     font-weight: 600;
     color: white;
-    font-size: 40px;
+    font-size: 38px;
     margin: auto;
 
 }
 
 .contenedor_s2{
-    height: 100vh;
     display: flex;
     flex-direction: column;
-
-    margin: auto;
+    
 }
 .contenedor_logo{
+    width: 100%;
+    padding: 20px;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);   
+    grid-template-columns: 20% 80%;   
 }
 
 .contenedor_logo p{
-    width: 30rem;
-    margin: auto 50px;
+    margin: auto;
+    width: 100%;
     color: white;
     font-size: 25px;
 }
-.contenedor_s2 img{
 
-    margin: auto 50px;
-    width: 100%;
-    object-fit: cover;
+.contenedor_s2 img{
+    width: 120px;
 }
+
+
 
 
 /* --------SECCION 3-------------- */
@@ -235,3 +250,325 @@
     color: #009AA9;
     margin: 50px 0;
 }
+
+
+/* SECCION 7 */
+.seccion_07{
+    margin-top: 50px;
+    width: 100%;
+    color: #009AA9;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+
+.primero07 h2{
+    color: #005E6D;
+    font-size: 52px;
+    font-weight: 700;
+    margin: 5px 50px;
+    text-align: center;
+    
+}
+.primero07 img{
+    margin: 20px 70px;
+    width: 80%;
+
+    object-fit: cover;
+
+}
+.linea01{
+    width: 80%;
+    height: 10px;
+    background-color: #00AF48;
+    margin: auto 0px;
+}
+
+.segundo07 p{
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    margin: 50px 50px;
+}
+
+.titulo07{
+    color: #00AF48;
+}
+
+.linea02{
+    width: 80%;
+    height: 10px;
+    background-color: #00AF48;
+    margin: auto 240px;
+    
+}
+
+/* SECCION 8 */
+.seccion_08{
+    width: 100%;
+    color: #005E6D;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 50px;
+}
+.segundo08 h2{
+    color: #005E6D;
+    font-size: 52px;
+    font-weight: 700;
+    margin: 5px 50px;
+    text-align: end;
+    width: 80%;
+    
+
+}
+.linea03{
+    width: 80%;
+    height: 10px;
+    background-color: #00AF48;
+    margin: auto 120px;
+}
+.primero08{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+
+}
+.titulo08{
+    color: #00AF48;
+
+}
+
+.primero08 p{
+    font-size: 20px;
+    font-weight: 700;
+    display: flex;
+    flex-direction: column;
+    margin: 10px 0px;
+    text-align: end;
+}
+.segundo08 img{
+    margin: 20px 70px;
+    width: 500px;
+    object-fit: cover;
+
+}
+
+.linea04{
+    width: 80%;
+    height: 10px;
+    background-color: #00AF48;
+}
+
+/* SECCION 9 */
+.seccion_09 {
+    background-color: #009AA9;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    margin-top: 50px;
+}
+
+.s03 {
+    width: 90%;
+    margin: auto;
+    padding-left: 30px;
+}
+
+.s03 h2 {
+    font-style: italic;
+    color: #fff;
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.s03 p {
+
+    color: #fff;
+    font-size: 28px;
+    margin-bottom: 20px;
+    font-weight: 300;
+}
+.container{
+    padding: 20px;
+}
+.contenedor{
+
+    background-color: #fff;
+}
+.animate-bg h4{
+    text-align: center;
+}
+.animate-bg{
+    padding: 10px;
+}
+
+/* SECCION 10 */
+
+.seccion_10{
+    width: 100%;
+    color: #005E6D;
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+}
+.superior10 h2{
+    width: 50%;
+    font-size: 52px;
+    font-weight: 900;
+    margin: 50px 50px;
+}
+.inferior10{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+
+}
+.texto10{
+    height: 100%;
+    color: #00AF48;
+    display: flex;
+    margin: auto;
+    padding: 20px;
+    width: 80%;
+}
+.numero{
+    font-size: 55px;
+    font-weight: 900;
+    margin: 0px 30px;
+}
+.texto10 p{
+    font-size: 20px;
+    font-weight: 700;
+    margin: auto;
+}
+
+/* SECCION 11 */
+
+.seccion_11{
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    margin-top: 30px;
+    background-color: #00AF48;
+
+}
+.seccion_11 h2{
+    margin: auto;
+    padding: 100px;
+    text-align: center;
+    font-size: 52px;
+    font-weight: 900;
+    
+}
+
+/* SECCION 12 */
+.seccion_12 a{
+    text-decoration: none;
+    color: #005E6D;
+    font-size: 50px;
+    font-weight: 700;
+    margin: 50px 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* FOOTER */
+/* Footer Styles */
+.footer {
+    background-color: #005E6C;
+}
+
+.footer__container {
+    padding-top: 20px;
+    padding-left: 100px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+
+.footer__col h4 {
+    margin-bottom: 1.5rem;
+    font-size: 1.2rem;
+    font-weight: 600;
+    color: white
+}
+
+.footer__col p {
+    margin-bottom: 1rem;
+    color: white;
+}
+
+.footer__col a {
+    display: block;
+    margin-bottom: 1rem;
+    color: white;
+    transition: 0.3s;
+}
+
+.footer__col a span {
+    margin-right: 5px;
+}
+
+.footer__col a:hover {
+    color: #00AE45;
+}
+
+.footer__socials {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+}
+
+.footer__socials span {
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+}
+
+.footer__bar {
+    padding: 1rem;
+    font-size: 0.9rem;
+    color: white;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+.logo_negativo {
+    width: 200px;
+    height: 100px;
+}
+
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    padding: 20px;
+    border: 1px solid #000000;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    z-index: 9999;
+}
+
+.popup-content {
+
+    text-align: center;
+}
+
+.close {
+    padding-top: 0;
+    width: 30px;
+    color: #000;
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    cursor: pointer;
+    font-size: 50px;
+}
+
