--- a/css/styles.css
+++ b/css/styles.css
@@ -1,521 +1,268 @@
-@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700;800&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;500;600;700&family=Onest:wght@300;400;600&family=Roboto+Slab&family=Roboto:wght@400;700&display=swap');
-
-:root {
-  --primary-color: #145b6b;
-  --primary-color-dark: #3f98a7;
-  --secondary-color: #131516;
-  --color-icon: #42ac39;
-  --text-dark: #333333;
-  --text-light: #767268;
-  --extra-light: #f8f8f8;
-  --white: #ffffff;
-  --max-width: 1200px;
-  --font-family: "Onest", sans-serif;	
-}
-
 * {
-  padding: 0;
   margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "Inter", sans-serif;
 }
 
-html,
-body {
-  scroll-behavior: smooth;
+ul {
+  list-style: none;
 }
 
-body {
-  font-size: 1rem;
-  font-weight: 600;
-  font-family: var(--font-family);
+header {
+  height: 100vh;
+  background-color: #005E6D;
+}
+
+nav {
+  display: grid;
+  grid-template-columns: 30% 70%;
+  align-items: center;
+  padding: 1.5rem 2rem;
+  
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  font-size: 1.2rem;
+}
+
+nav a:hover {
+  color: #00AE44;
+  transition: 0.3s;
+
+}
+
+nav ul {
+
+  display: flex;
+}
+
+nav ul li{
+  margin: 0 2rem;
 }
 
 
-/* General Styling */
-.section__container {
-  max-width: var(--max-width);
-  padding: 5rem 1rem;
-  margin: auto;
+nav img {
+
+  width: 160px;
+  height: 80px;
+  margin-left: 30px;
 }
-.form{
+
+.banner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.b01 {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  margin: auto;
-}
-.section__header {
-  margin-bottom: 5px;
-  font-size: 3rem;
-  font-weight: 600;
-  color: var(--text-dark);
-}
-
-.section__subheader {
-  color: var(--text-light);
+  justify-content: center;
+  width: 100%;
+  height: 450px;
+  ;
+  padding-left: 5rem;
+  font-size: 1.5rem;
+  color: #fff;
 }
 
-.btn {
-  padding: 0.75rem 1.5rem;
-  font-size: 1rem;
-  outline: none;
-  border-radius: 5px;
-  cursor: pointer;
+.b01 a {
+  margin-top: 10px;
+  text-align: center;
+  width: 220px;
+  color: #f2f2f2;
+  text-decoration: none;
+  padding: 10px;
+  background-color: #00AE44;
+  font-weight: 500;
+  border-radius: 10px;
+
+}
+
+.b01 a:hover {
+  background-color: #f2f2f2;
+  color: #00AE44;
   transition: 0.3s;
 }
 
-/* Button Styles */
-.btn__secondary {
-  color: var(--white);
-  border: 2px solid var(--primary-color);
-  background-color: var(--primary-color);
+
+.b02 {
+  width: 100%;
+  height: 450px;
+
 }
 
-.btn__primary:hover {
-  background-color: var(--extra-light);
+.b02 img {
+
+  width: 400px;
+  height: 450px;
+  object-fit: cover;
+  margin: 0 0 0 8vw;
+
 }
 
-.btn__secondary:hover {
-  background-color: var(--primary-color-dark);
-  border-color: var(--primary-color-dark);
-  color: var(--white);
+
+/* acrds */
+
+.seccion_02{
+  width: 100%;
+  height: 100vh;
+}
+.seccion_02 h2{
+
+  margin-top: 80px;
+  margin-bottom: 50px;
+  text-align: center;
+  font-size: 2rem;
+  color: #00AE44;
+  font-weight: 800;
+
 }
 
-/* Image and Link Styles */
-img {
+ .cards {
   width: 100%;
   display: flex;
-}
-
-a {
-  text-decoration: none;
-}
-
-/* Navigation Styles */
-.nav__bar {
-  
-  max-width: var(--max-width);
-  margin: auto;
-  padding: 0.7rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  
-}
-
-.nav__logo {
-  flex: 1;
-}
-
-.nav__logo a {
-  font-size: 1.2rem;
-  font-weight: 700;
-  color: var(--primary-color);
-}
-
-.nav__links {
-  list-style: none;
-  display: flex;
-  align-items: center;
-  gap: 2rem;
-}
-.link{
-  transition: 0.5s;
-}
-.link:hover{
-  transform: scale(1.2);
-}
-
-.link a {
-  padding: 5px;
-  font-weight: 600;
-  color: var(--text-dark);
-}
-
-.link a:hover {
-  color: var(--primary-color);
-  
-}
-
-.nav__btns {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: flex-end;
-  gap: 1rem;
-}
-h2{
-  font-size: 2rem;
-  font-weight: 600;
-}
-span {
-  color: var(--color-icon);
-}
-
-/* Header Styles */
-.header {
-  background-color: var(--extra-light);
-}
-
-.header__container {
-  display: grid;
-  grid-template-columns: minmax(0, 1fr) minmax(0, calc(var(--max-width) / 2)) minmax(0, calc(var(--max-width) / 2)) minmax(0, 1fr);
-}
-
-.header__content {
-  padding: 5rem 1rem;
-  grid-column: 2/3;
-}
-
-.header__content h1 {
-  margin-bottom: 1rem;
-  font-size: 4rem;
-  font-weight: 600;
-  line-height: 5rem;
-  color: var(--text-dark);
-}
-
-.header__content p {
-  margin-bottom: 2rem;
-  color: var(--text-light);
-}
-
-.header__btns {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.header__image {
-  grid-column: 3/5;
-  padding-right: 50px;
-}
-
-.header__image img {
-  padding-top: 100px;
-  object-fit: cover;
-}
-
-/* About Section Styles */
-.about__container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-  align-items: center;
-}
-
-.about__image img {
-  max-width: 450px;
-  margin: auto;
-}
-
-.about__content h3 {
-
-  color: var(--primary-color);
-}
-
-.about__grid {
-  margin-top: 2rem;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 1rem;
-}
-
-.about__card h4 {
-  margin-bottom: 10px;
-  font-size: 0.9rem;
-  font-weight: 600;
-  white-space: nowrap;
-  color: var(--primary-color);
-}
-
-.about__card p {
-  font-size: 2.5rem;
-  color: var(--text-dark);
-}
-/* count */
-/* ----- Cuenta Regresiva ----- */
-
-
-.contador{
-  opacity: 0.9;
-  padding: 20px;
-  background-color: var(--primary-color);
-  height: 400px;
-  text-align: center;
-  
-  
-}
-.contador h2{
-  margin-top: 30px;
-  color: var(--extra-light);
-}
-.contador span{
-  color: var(--extra-light);
-
-}
-.contador button{
-  background-color: var(--primary-color-dark);
-}
-.contador button:hover{
-  background-color: var(--primary-color);
-}
-
-#cuenta {
-  border-radius: 20px;
-  display: flex;
   justify-content: center;
-  background-color: var(--secondary-color);
-  height: 100%;
-  margin-bottom: 20px;
-}
-
-.simply-section {
-  width: 200px;
-  height: 180px;
-  border-radius: 10px;
-  display: flex;
   align-items: center;
-  justify-content: center;
-
-}
-
-.simply-amount {
-  color: var(--primary-color-dark);
-  display: block;
-  font-size: 40px;
-  font-weight: 700;
-}
-
-.simply-word {
-  color: var(--primary-color-dark);
-  font-weight: 100;
-  font-size: 20px;
-}
-
-
-/* ---------------------------- */
-
-/* proyect */
-
-.section_proy {
-  padding: 2rem;
-  margin-top: 20px;
-  background-color: var(--extra-light);
-}
-.text-center h2{
-  color: var(--secondary-color);
 }
 
 .card {
-  background-color: var(--extra-light);
-  border: #ffffff;
+  width: 370px;
+  height: 420px;
+  margin: 0 10px;
+  perspective: 1000px;
+  border-radius: 10px;
 }
 
-.card img {
-  border-radius: 10px 20px;
-  padding-top: 10px;
-  width: auto;
-  height: 250px;
-  transition: 0.5s;
-}
-
-.card img:hover {
-  transform: scale(0.9);
-}
-.card-img-top{
-  background-size: cover;
-}
-
-/* CONTACT */
-
-.contact__image img {
-  max-width: 450px;
-  margin: auto;
-}
-
-.contact__content form {
+.card .front,
+.card .back {
   width: 100%;
-  margin-top: 2rem;
-  display: grid;
-  gap: 1rem;
+  height: 100%;
+  position: absolute;
+  backface-visibility: hidden;
 }
 
-.contact__content .form__group {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 2rem;
-}
-
-.contact__content :is(input, textarea) {
-  width: 100%;
-  padding: 1rem;
-  outline: none;
-  border: none;
-  font-size: 1rem;
-  background-color: var(--extra-light);
-  border-radius: 5px;
-}
-
-.contact__content textarea {
-  font-size: 1rem;
-  font-weight: 600;
-  font-family: var(--font-family);
-}
-
-.contact__content input::placeholder {
-  color: var(--text-light);
-}
-
-.contact__content button {
-  max-width: fit-content;
-  padding: 1rem 1.5rem;
-  outline: none;
-  border: none;
-  color: var(--white);
-  background-color: var(--primary-color);
-  cursor: pointer;
-  transition: 0.3s;
-}
-
-.contact__container button:hover {
-  background-color: var(--primary-color-dark);
-}
-#contact{
-  background-color: var(--extra-light);
-
-}
-#contact h2{
-  color: var(--secondary-color);
-  text-align: center;
-  align-items: center;
-  justify-content: center;
-}
-/* --------------------------- */
-
-/* Footer Styles */
-.footer {
-  background-color: var(--secondary-color);
-}
-
-.footer__container {
-  display: grid;
-  grid-template-columns: 2fr repeat(3, 1fr);
-  gap: 2rem;
-}
-
-.footer__col h4 {
-  margin-bottom: 1.5rem;
-  font-size: 1.2rem;
-  font-weight: 600;
-  color: var(--white);
-}
-
-.footer__col p {
-  margin-bottom: 1rem;
-  color: var(--white);
-}
-
-.footer__col a {
-  display: block;
-  margin-bottom: 1rem;
-  color: var(--extra-light);
-  transition: 0.3s;
-}
-
-.footer__col a span {
-  margin-right: 5px;
-}
-
-.footer__col a:hover {
-  color: var(--primary-color);
-}
-
-.footer__socials {
+.card .front {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  gap: 1rem;
+  transition: transform 0.5s;
 }
 
-.footer__socials span {
-  font-size: 1.5rem;
-  color: var(--white);
-  cursor: pointer;
-}
-
-.footer__bar {
-  padding: 1rem;
-  font-size: 0.9rem;
-  color: var(--white);
+.card .back {
+  display: none;
+  padding: 20px;
+  transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
+  transition: transform 0.5s;
+}
+
+.card.flipped .front {
+  
+  transform: rotateY(-180deg);
+}
+
+.card.flipped .back {
+  transform: rotateY(0deg);
+  display: flex;
+}
+
+.card p {
+  width: 80%;
+  text-align: center;
+  color: white;
+  font-weight: 500;
+  font-size: 18px;
+  position: relative;
+}
+
+.card .title{
+  font-size: 24px;
+  font-weight: 600;
+  width: 50%;
+
+}
+
+.uno {
+  background-color: #00AE44;
+  background-size: cover;
+  position: relative;
+
 }
 
 
+.dos {
+background-color: #0BCDD6;
+  position: relative;
+  background-size: cover;
 
-/* Media Queries */
-@media (max-width: 1200px) {
-  .nav__btns {
-    display: none;
-  }
-}
-
-@media (max-width: 900px) {
-  .project__container {
-    grid-template-columns: 1fr;
-  }
-
-  .header__container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .header__content {
-    grid-column: unset;
-  }
-
-  .header__image {
-    grid-column: unset;
-    grid-area: 1/1/2/2;
-  }
-
-  .about__container,
-  .contact__container {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .footer__container {
-    grid-template-columns: 2fr 1fr;
-  }
-
-  .footer__col:nth-child(4) {
-    grid-area: 2/1/3/2;
-  }
 }
 
 
-@media (max-width: 600px) {
-  .project__container {
-    grid-template-columns: 1fr;
-  }
+.tres {
+  background-color: #005E6D;
+  position: relative;
+  background-size: cover;
 
-  .header__image {
-    width: 200px;
-    margin: auto;
-  }
+}
+.front .link{
+  margin-top: 30PX;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
-  .header__image img {
-    width: 100%;
-  }
+}
+.front .link:hover{
+  cursor: pointer;
 
-  .nav__links {
-    display: none;
-  }
-
-  .contact__content .form__group {
-    gap: 1rem;
-  }
-
-  .footer__container {
-    grid-template-columns: repeat(2, 1fr);
-  }
 }
 
+
+/* SECCION 03 */
+.seccion_03{
+  background-image: url("../assets/nuevo/fondos3.png");
+  width: 100%;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 30% 70%;
+  z-index: 2;
+}
+
+.seccion_03::before{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(40, 220, 85, 0.972);
+  z-index: -1;
+
+}
+.textos3{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 0 5rem;
+ 
+}
+
+.textos3 p{
+  font-size: 1.5rem;
+  color: #f2f2f2;
+  font-weight: 600;
+  margin-bottom: 20px;
+  z-index: 3;
+}
+
+.calendario{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
